syntax="proto3";
option go_package = "task/";

//window: protoc -I idl/task/pb idl/task/*.proto --go_out=plugins=grpc:.
//mac: protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./idl/task/task.proto
//mac: protoc-go-inject-tag -input=./idl/pb/task/task.pb.go

message TaskModel {
    // @inject_tag: json:"task_id" form:"task_id"
    int64 TaskID=1;
    // @inject_tag: json:"user_id" form:"user_id"
    int64 UserID=2;
    // @inject_tag: json:"status" form:"status"
    int64 Status=3;
    // @inject_tag: json:"title" form:"title"
    string Title=4;
    // @inject_tag: json:"content" form:"content"
    string Content=5;
    // @inject_tag: json:"start_time" form:"start_time"
    int64 StartTime=6;
    // @inject_tag: json:"end_time" form:"end_time"
    int64 EndTime=7;
}

message TaskRequest{
    // @inject_tag: json:"task_id" form:"task_id"
    int64 TaskID=1;
    // @inject_tag: json:"user_id" form:"user_id"
    int64 UserID=2;
    // @inject_tag: json:"status" form:"status"
    int64 Status=3;
    // @inject_tag: json:"title" form:"title"
    string Title=4;
    // @inject_tag: json:"content" form:"content"
    string Content=5;
    // @inject_tag: json:"start_time" form:"start_time"
    int64 StartTime=6;
    // @inject_tag: json:"end_time" form:"end_time"
    int64 EndTime=7;
}

message TasksDetailResponse{
    // @inject_tag: json:"task_model" form:"task_model"
    repeated TaskModel TaskDetail=1;
    // @inject_tag: json:"code" form:"code"
    int64 Code=2;
}

message TaskCommonResponse{
    // @inject_tag: json:"code" form:"code"
    int64 Code=1;
    // @inject_tag: json:"msg" form:"msg"
    string Msg=2;
    // @inject_tag: json:"data" form:"data"
    string Data=3;
}

service TaskService{
    rpc TaskCreate(TaskRequest) returns(TaskCommonResponse);
    rpc TaskUpdate(TaskRequest) returns(TaskCommonResponse);
    rpc TaskShow(TaskRequest) returns(TasksDetailResponse);
    rpc TaskDelete(TaskRequest) returns(TaskCommonResponse);
}
// 四个远程过程调用（RPC)方法: 创建任务、更新任务、显示任务和删除任务
